# musy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
musy/: __main__.py  cache.py  config.py  db.py  emojis.py  formatting.py  keyboards.py  music.py  yalink.py
musy/handlers/: __init__.py  chart.py  commands.py  favorites.py  inline.py
